--- a/Profile/profile_css.html
+++ b/Profile/profile_css.html
@@ -50,8 +50,7 @@
           <div class="d-flex flex-wrap gap-2">
             <span class="badge text-bg-light">메카트로닉스공학</span>
             <span class="badge text-bg-light">AI · LLM</span>
-            <span class="badge text-bg-light">C++ · Python</span>
-            <span class="badge text-bg-light">시스템설계</span>
+            <span class="badge text-bg-light">Python</span>
           </div>
         </div>
       </div>
@@ -59,7 +58,6 @@
   </header>
 
   <main class="container py-5">
-
     <section id="about" class="mb-5">
       <div class="text-center">
         <h2 class="section-title">자기소개</h2>
@@ -74,7 +72,7 @@
               <li><b>이름</b>: 기동주</li>
               <li><b>나이</b>: 28세</li>
               <li><b>전공</b>: 메카트로닉스공학</li>
-              <li><b>한 줄 소개</b>: 새로운 분야에 도전하는 것을 좋아합니다.</li>
+              <li><b>한 줄 소개</b>: 새로운 분야에 도전하는 것을 좋아하고, SKALA에서 AI 서비스에 대해 공부하고 싶습니다.</li>
             </ul>
           </div>
         </div>
@@ -103,7 +101,6 @@
         <div class="row g-3 align-items-center">
           <div class="col-md-4 text-center">
             <img class="iufc-img" src="IUFC.jpeg" alt="인천유나이티드FC(IUFC) 응원 사진">
-            <div class="text-muted mt-2" style="font-size:.9rem;">IUFC.jpeg</div>
           </div>
           <div class="col-md-8">
             <h3 class="h5 fw-bold mb-2">인천유나이티드FC 응원</h3>
@@ -166,6 +163,7 @@
             <h3 class="h5 fw-bold">자주 사용하는 링크</h3>
             <ul class="mb-0">
               <li><a href="https://youtube.com/" target="_blank" rel="noreferrer">Youtube</a></li>
+              <li><a href="https://mc.skhystec.com/V3/menu.html" target="_blank" rel="noreferrer">점심메뉴</a></li>
             </ul>
           </div>
         </div>
@@ -217,8 +215,9 @@
       </div>
     </section>
 
+
     <footer class="text-center text-muted py-4">
-      <small>© 2026 기동주</small>
+      <small>© 2026 기동주. All rights reserved.</small>
     </footer>
   </main>
 
